# ztmtoosm

./: .gitignore  .permisions  HafasBaza.hpp  Makefile  README.md  RareToThickRoutes.cpp  RouteInfoGenerator.cpp  TODO  ciapa.cpp  createdb.sh  dijkstra.cpp  dijkstra.hpp  download_osm_map.sh  easy_dijkstra.cpp  genw.sh  hafas1.cpp  htmlgen.hpp  htmlgenerator.cpp  make.sh  nasz.js  nasz2.js  openlayers2.html  osm_base.hpp  osm_check_routes.cpp  osm_download.sh  osmapi.cpp  polacz.cpp  readztm.hpp  scr.sql  sql1.hpp  starelinie.hpp  stringspecial.cpp  stringspecial.hpp  ter.css  test.sh  test3.sh  test_osm_base.cpp  testparse.cpp  ztm_download4.sh  ztm_download5.cpp  (+2 more)
data/: lista9.ooo  metro.txt
database_test/: sqltest.sh  sqltest2.txt  sqltest3.txt  style.lua  testdatabase.cpp
include/HTMLGenerator/: HTMLGenerator.hpp
include/RareToThickRoutes/: dij_data.hpp
include/RouteInfoGenerator/: PrzegladanieCzyPrawidloweStareLinie.hpp
include/ScheduleReader/: ScheduleReader.hpp
psql/: Koordynacje.js  KoordynacjeInit.psql
rapidxml/: rapidxml_print.hpp
src/: CMakeLists.txt  HafasBaza.hpp  conf.h.in  dij_data.hpp  dijkstra.hpp  htmlgen.hpp  md5.h  osm_base.cpp  osm_base.hpp  readztm.hpp  sciezka1.hpp  sql1.hpp  starelinie.hpp  szkielet.hpp  ztmosmpor.hpp
src/HTMLGenerator/: CMakeLists.txt  HTMLGenerator.cpp  HTMLGenerator.hpp
src/Koordynacje/: CMakeLists.txt  md5.cpp  test.cpp
src/RareToThickRoutes/: CMakeLists.txt  RareToThickRoutes.cpp  RareToThickRoutes2.cpp  dij_data.cpp  dij_data.hpp  dijkstra.cpp  dijkstra.hpp
src/RouteInfoGenerator/: CMakeLists.txt  HTMLHeadersRouteInfo.cpp  HTMLHeadersRouteinfo.hpp  OsmStopData.cpp  OsmStopData.hpp  PrzegladanieCzyPrawidloweStareLinie.hpp  PrzeglądanieCzyPrawidloweStareLinie.cpp  RaportPrzystanki.hpp  RouteCohesion.cpp  RouteCohesion.hpp  RouteInfoGenerator.cpp  WlasciwosciLokalne.cpp  WlasciwosciLokalne.hpp  WypisywanieWspolrzednychTras.cpp  WypisywanieWspolrzednychTras.hpp  generator2.cpp  ztmosmpor.cpp  ztmosmpor.hpp
src/ScheduleReader/: CMakeLists.txt  ScheduleReader.cpp  ScheduleReader.hpp  ScheduleReaderGdansk.hpp  ScheduleReaderLodz.hpp  ScheduleReaderSzczecin.hpp
src/ntt/: CMakeLists.txt  OperatorLite.cpp  OperatorPg.cpp  OsmLite.cpp  OsmPg.cpp  PgSql.cpp  PgSql.h  ToLite.cpp  ToPg.cpp  TreeLite.cpp  sqlite_my.cpp  sqlite_my.h  sqlite_my.hpp
src/osmbase/: CMakeLists.txt  osm_base.cpp  osm_base.hpp
src/stringspecial/: CMakeLists.txt  stringspecial.cpp  stringspecial.hpp
src/testparse/: CMakeLists.txt  szkielet.cpp  szkielet.hpp  testparse.cpp
src2/: HafasBaza.hpp  md5.cpp  shapesgen.cpp
templates-www/: diffLine.template  errLine.template  infoLine.template  lineHeader.template  progress.template  theme.template  theme2.template  theme3.template  theme4.template  theme5.template  themeA.template  themeB.template
wtf/: HafasBaza.hpp  database1.cpp  easy_netz.cpp  hafas1.cpp  hard_netz.cpp  outline.cpp  temp.cpp  ztm_download5.cpp
www/: Koordynacje.html  ManagerRelacji.js  Relacja.js  WizualizacjaDrzewa.js  WizualizacjaPodrozy.js  WprowadzanieWspolrzednych.js  koo.js  nasz.js  rss-test.js  tbl.js  ter.css  wyszukiwarka1.css  wyszukiwarka1.html  wyszukiwarka1.js  wyszukiwarka2.css  wyszukiwarka2.html  wyszukiwarka2.js  wyszukiwarka3.html
