add_library (OsmStopData OsmStopData.cpp)
target_link_libraries(OsmStopData osmbase)
add_library (RouteInfoGenerator2 HTMLHeadersRouteInfo.cpp PrzeglądanieCzyPrawidloweStareLinie.cpp RouteCohesion.cpp ztmosmpor.cpp WlasciwosciLokalne.hpp WypisywanieWspolrzednychTras.hpp WypisywanieWspolrzednychTras.cpp)
