include_directories(/usr/include/postgresql)
add_library(sqlite3 sqlite3.c)
add_library(sqlite_my sqlite_my.cpp)
add_library(pgsql PgSql.cpp)
add_executable (operatorlite OperatorLite.cpp)
add_executable (operatorpg OperatorPg.cpp)
add_executable (osmlite OsmLite.cpp)
add_executable (osmpg OsmPg.cpp)
#add_executable (schedule Schedule.cpp)
target_link_libraries (sqlite3 pthread dl)
target_link_libraries (operatorlite ScheduleReader sqlite3 sqlite_my)
target_link_libraries (operatorpg ScheduleReader sqlite3 pq pgsql)
#target_link_libraries (schedule ScheduleReader sqlite3 sqlite_my)
target_link_libraries (osmlite OsmStopData sqlite3 sqlite_my)
target_link_libraries (osmpg RouteInfoGenerator2 OsmStopData sqlite3 pq pgsql)
